--- a/visual.css
+++ b/visual.css
@@ -1,8 +1,35 @@
 body{background-color:black} /*цвят на background*/
+.margins{
+        font-family: Century;
+        font-size:xx-large;
+        background-color: green;
+        color:black;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        margin-right: 5px;
+        margin-left: 5px;
+        border-style: solid;
+        border-color: yellow;
+}
+.little_margins{
+    font-family: Century;
+    font-size:small;
+    background-color: green;
+    color:black;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    margin-left: 5px;
+    border-style: solid;
+    border-color: yellow;
+}
+div{
+   background-color:black;
+   border-width: 2px;
+}
 h1{
     color:white; /*цвят на текст h1*/
-    font-family: Monotype Corsiva;
-    font-size:xx-large;
+    font-family: Arial;
     text-align:center;
 } 
 p{
